add route GetCommentsFromOnePost
