# app/routes/comment.js
@@ -1,4 +1,4 @@
-const {createComment,getAll, getOne, deleteOne} = require('../controller/commentCtrl')
+const {createComment,getAll, getOne, deleteOne, getFromOnePost} = require('../controller/commentCtrl')
 const authorization = require('../middleware/authorization')
 const isAuth = require('../middleware/isAuth')
 module.exports = function(app){
@@ -6,4 +6,5 @@ module.exports = function(app){
     app.get('/comment', getAll)
     app.get('/comment/:id', getOne)
     app.delete('/comment/:id',isAuth,authorization,deleteOne)
+    app.get('/comments/:id', getFromOnePost)
 }
